--- a/package.json
+++ b/package.json
@@ -4,15 +4,25 @@
   "description": "Reto 9 Octubre 26: Curso de Backend con Node",
   "main": "index.js",
   "dependencies": {
+    "@hapi/boom": "^8.0.1",
+    "@hapi/joi": "^16.1.7",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-slash": "^2.0.1",
+    "mongodb": "^3.3.3",
+    "proxyquire": "^2.1.3"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "mocha": "^6.2.2",
+    "nodemon": "^1.19.4",
+    "nyc": "^14.1.1",
+    "prettier": "^1.18.2",
+    "sinon": "^7.5.0",
+    "supertest": "^4.0.2"
   },
   "scripts": {
-    "dev": "DEBUG=app:* nodemon src/index.js",
-    "start": "NODE_ENV=production node src/index.js"
+    "dev": " SET DEBUG=app:* &  nodemon src/index.js",
+    "start": "SET NODE_ENV=production &  node src/index.js"
   },
   "repository": {
     "type": "git",
