--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "scripts": {
     "dev": " SET DEBUG=app:* &  nodemon src/index.js",
-    "start": "SET NODE_ENV=production &  node src/index.js"
+    "start": "SET NODE_ENV=production &  node src/index.js",
+    "test": "mocha --exit"
+
   },
   "repository": {
     "type": "git",
