--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "backend for movi",
+  "name": "escuelajs-reto-09",
   "version": "1.0.0",
   "description": "Backend for Movi",
   "main": "index.js",
   "dependencies": {
     "@hapi/boom": "^8.0.1",
     "@hapi/joi": "^16.1.7",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-slash": "^2.0.1",
@@ -26,7 +27,7 @@
     "test": "mocha --exit"
   },
   "repository": {
-    "type": "git",
+    "type": "git"
   },
   "keywords": [],
   "author": "",
